--- a/html/bank.html
+++ b/html/bank.html
@@ -17,6 +17,7 @@ href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" i
 
 </head>
 <body>
+<p> DEVELOPER:Nitin Kumar Sahu</p>
 <section id="nav-bar">
 <nav class="navbar navbar-expand-lg navbar-light">
   <a class="navbar-brand" href="#"><img src=""></a>
